
PIG-4925: Support for passing the bloom filter to the Bloom UDF (rohini)

PIG-4911: Provide option to disable DAG recovery (rohini)

PIG-4906: Add Bigdecimal functions in Over function (cgalan via daijy)

PIG-2768: Fix org.apache.hadoop.conf.Configuration deprecation warnings for Hadoop 23 (rohini)
 
OPTIMIZATIONS
 
BUG FIXES

PIG-5038: Pig Limit_2 e2e test failed with sort check (Konstantin_Harasov via rohini)

PIG-5039: TestTypeCheckingValidatorNewLP.TestTypeCheckingValidatorNewLP is failing (nkollar via knoguchi)

PIG-3087: Refactor TestLogicalPlanBuilder to be meaningful (szita via daijy)

PIG-4976: streaming job with store clause stuck if the script fail (daijy via knoguchi)

PIG-5035: killJob API does not work in Tez (zjffdu via rohini)

PIG-5032: Output record stats in Tez is wrong when there is split followed by union (rohini)

PIG-5031: Tez failing to compile when replicate join is done with a limit vertex on left (knoguchi)

PIG-5019: Pig generates tons of warnings for udf with enabled warnings aggregation (murshyd via rohini)

PIG-4974: A simple map reference fail to cast (knoguchi)

PIG-4975 Map schema shows "Type: null Uid: null" in explain (knoguchi)

PIG-4973: Bigdecimal divison fails (szita via daijy)

PIG-4967: NPE in PigJobControl.run() when job status is null (water via daijy)

PIG-4972: StreamingIO_1 fail on perl 5.22 (daijy)

PIG-4933: TestDataBagAccess.testBagConstantFlatten1/TestLogicalPlanBuilder.testQuery90 broken after PIG-2315 (knoguchi)

PIG-4965: Refactor test/perf/pigmix/bin/runpigmix.pl to delete the output of single test case
  if we enable cleanup_after_test (kellyzly via daijy)

PIG-4966: Fix Pig compatibility with Hive 2.1.0 (zyork via daijy)

PIG-4935: TEZ_USE_CLUSTER_HADOOP_LIBS is always set to true (rohini)

PIG-4961: CROSS followed by LIMIT inside nested foreach drop data from result (rohini)

PIG-4960: Split followed by order by/skewed join is skewed in Tez (rohini)
